SONAR-9891 Add Analysis to PostProjectAnalysisTask.ProjectAnalysis